# portmanagement

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  DESIGN_SYSTEM.md  README.md  TODOS.md  add-command.ts  api-server.ts  build-macos.ts  build-number.json  build-win.ts  fix-dmg.ts  index.html  index.ts  package-lock.json  package.json  portal.html  setup.html  stamp-icon.py  start.bat  update-version.ts  vercel.json  vite.config.ts  vite.portal.config.ts  실행.bat  실행.command  완성된앱실행.command  포트에추가.command
.github/workflows/: build-windows.yml
.omc/: project-memory.json
.tdd-plans/port-features/: PLAN.md  architecture.md  domain-analysis.md  implementation-checklist.md  tdd-strategy.md
docs/: DOGFOOD.md  ERRORS.md  PLAN.md  architecture.md  domain-analysis.md  implementation-checklist.md  onboarding-audit.md  tdd-strategy.md
docs/user-guide/: GUIDE.md  feature-inventory.md  guide-structure.md
src/: App.tsx  ClaudeAuthBadge.tsx  ErrorBoundary.tsx  PortalManager.tsx  SetupWizard.tsx  index.css  main.tsx  portal-main.tsx  pushHistory.ts  setup-main.tsx  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/guide/: GuideMode.tsx  guideContent.ts
src/lib/: env.ts  (+1 more)
supabase/: config.toml
tests/: error-resilience-test.py  functional-test.mjs  perf-measure.mjs  smoke.mjs  title-verify-test.mjs  touch-validate.mjs  touch-validate.py  windows-diagnostics.ps1  windows-playwright-test.js
uploaded-commands/: 실행.command
(+20 files in other folders)
