[package]
name = "app"
version = "0.1.0"
description = "포트 관리기 — 로컬 개발 서버 포트 & 워크트리 관리 도구"
authors = ["CS & Company"]
license = "Proprietary"
repository = "https://github.com/cs-company/portmanager"
homepage = "https://portmanager.cscompany.dev"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
regex = "1.12"
libc = "0.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
